# fledge-plugin-scratch

./: Cargo.toml  README.md  fledge.toml  plugin.toml
.fledge/: meta.toml
.github/workflows/: ci.yml  pages.yml  release.yml
.specsync/: adoption-report.json  registry.toml  sdd.json
.specsync/changes/CHG-0001-adopt-specsync-5-0-1-and-trust-1-0-0-governance-for-the-scratch-fledge-plugin/: approvals.json  change.md  context.md  design.md  docs.md  plan.md  research.md  state.json  tasks.md  testing.md  verification.json
docs/: index.html
specs/scratch/: context.md  requirements.md  scratch.spec.md  tasks.md  testing.md
src/: main.rs
